Fix job info on mobile screen

--- a/src/components/JobDetails/JobDetails.css
+++ b/src/components/JobDetails/JobDetails.css
@@ -151,6 +151,7 @@
 }
 
 .job-details-more-list-mobile {
+	z-index: -1;
 	display: none;
 }
 
@@ -199,5 +200,12 @@
 
 	.job-details-actions-date {
 		align-self: auto;
+	}
+
+	.job-details-heading-info {
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+		margin-top: 10px;
 	}
 }
